force-app/main/default/objects/TwilioSF__Opt_In__c/TwilioSF__Opt_In__c.object-meta.xml
<CustomObject>
    <label>Opt-In</label>
    <nameField>
        <displayFormat>OI-{0000000000}</displayFormat>
        <label>Opt-In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opt-Ins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>