force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Active__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When true, the number has opted in.  If false the number has opted out.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>