force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Contact__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Opt_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>