force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Lead__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Opt_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>