force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Opt_In_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Opt_In_Date_Time__c</fullName>
    <label>Opt-In Date Time</label>
    <type>DateTime</type>
</CustomField>