force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Opt_In_Keyword__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Opt_In_Keyword__c</fullName>
    <label>Opt-In Keyword</label>
    <referenceTo>TwilioSF__Opt_In_Keyword__c</referenceTo>
    <relationshipLabel>Opt-Ins</relationshipLabel>
    <relationshipName>Opt_Ins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>