force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Opt_In_Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Opt_In_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opt-In Message</label>
    <referenceTo>TwilioSF__Message__c</referenceTo>
    <relationshipLabel>Opt-Ins</relationshipLabel>
    <relationshipName>Opt_Ins</relationshipName>
    <type>Lookup</type>
</CustomField>