force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Opt_In_Message_Sid__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Opt_In_Message_Sid__c</fullName>
    <label>Opt-In Message Sid</label>
    <length>50</length>
    <type>Text</type>
</CustomField>