force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Opt_In_Phone_Number_Unformatted__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Opt_In_Phone_Number_Unformatted__c</fullName>
    <externalId>true</externalId>
    <label>Opt-In Phone Number Unformatted</label>
    <length>50</length>
    <type>Text</type>
</CustomField>