force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>