force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__Phone_Number_index__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Phone_Number_index__c</fullName>
    <description>Alias field of Phone_Number__c. Used for SOQL indexed filter</description>
    <externalId>true</externalId>
    <label>Phone Number Index</label>
    <length>50</length>
    <type>Text</type>
</CustomField>