force-app/main/default/objects/TwilioSF__Opt_In__c/fields/TwilioSF__UniqueId__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__UniqueId__c</fullName>
    <externalId>true</externalId>
    <label>UniqueId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>